[package]
name = "bili"
authors = ["lifegpc"]
description = "A video downloader"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
futures = "0.3"
gettext = "0.4.0"
html_parser = "0.6.2"
json = "0.12.4"
lazy_static = "1.4.0"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["brotli", "deflate", "gzip", "stream"] }
subprocess = "0.2.7"
thirtyfour = "0.31.0"
tokio = "1.11.0"
# url = "2.2.2"
urlencoding = "2.1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnls", "stringapiset"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[package.metadata.winres]
OriginalFilename = "bili.exe"
LegalCopyright = "Copyright (C) 2021  lifegpc"
CompanyName = "lifegpc"
